# 100dPythonProject_blackjack-start_stella

./: main.py  pyproject.toml  requirements.txt
